--- a/FreeCodeCampAcademy.csproj
+++ b/FreeCodeCampAcademy.csproj
@@ -1,9 +1,44 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
+		<PackageReference Include="XP.Kit.CommonUItils" Version="1.0.16" />
+		<PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+		<PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
+		<PackageReference Include="XP.Kit.Caching" Version="1.0.1" />
+		<PackageReference Include="XP.Kit.DomainUtils" Version="1.0.2" />
+		<PackageReference Include="XP.Kit.ResultUtils" Version="1.0.10" />
+		<PackageReference Include="XP.Kit.Security" Version="1.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\FreeCodeCampAcademy.APIService\FreeCodeCampAcademy.APIService.csproj" />
+	  <ProjectReference Include="..\FreeCodeCampAcademy.DTO\FreeCodeCampAcademy.DTO.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Assets\AppStore\" />
+	  <Folder Include="Assets\AViewConfigs\" />
+	  <Folder Include="Assets\Enums\" />
+	  <Folder Include="Assets\VComponents\" />
+	  <Folder Include="Assets\AppSession\" />
+	  <Folder Include="Assets\AppKits\" />
+	  <Folder Include="Models\Enums\" />
+	  <Folder Include="Models\RegVMs\" />
+	  <Folder Include="ViewComponents\" />
+	  <Folder Include="wwwroot\AppDocs\" />
+	  <Folder Include="wwwroot\jdata\" />
+	  <Folder Include="wwwroot\scss\" />
+	</ItemGroup>
+
+	<!--<ItemGroup>
+		<Folder Include="wwwroot\AppDocs\TempUploads\" />
+	</ItemGroup>-->
 
 </Project>
